--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,15 @@
         android:layout_marginRight="7dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="6dp" />
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="7dp"
+        />
 
+    <Button
+        android:id="@+id/submitText"
+        android:layout_width="368dp"
+        android:layout_height="0dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp"
+        />
 </android.support.constraint.ConstraintLayout>
